[gd_scene load_steps=14 format=3]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="2"]
[ext_resource type="Script" path="res://scripts/Enemy.gd" id="3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(30, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(30, 30)

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_2"]
font_size = 14

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
offset_left = 0.0
offset_top = 0.0
offset_right = 900.0
offset_bottom = 600.0
color = Color(0.08, 0.09, 0.11, 1)

[node name="ArenaFrame" type="ColorRect" parent="."]
offset_left = 30.0
offset_top = 80.0
offset_right = 870.0
offset_bottom = 585.0
color = Color(0.12, 0.13, 0.16, 1)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(140, 320)
script = ExtResource("2")

[node name="PlayerHitbox" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_1")

[node name="PlayerVisual" type="ColorRect" parent="Player"]
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
color = Color(0.2, 0.75, 1, 1)

[node name="Enemy" type="CharacterBody2D" parent="."]
position = Vector2(700, 300)
script = ExtResource("3")

[node name="EnemyHitbox" type="CollisionShape2D" parent="Enemy"]
shape = SubResource("RectangleShape2D_2")

[node name="EnemyVisual" type="ColorRect" parent="Enemy"]
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
color = Color(1, 0.35, 0.35, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="VBoxContainer" parent="UI"]
offset_left = 18.0
offset_top = 16.0
offset_right = 620.0
offset_bottom = 120.0

[node name="StateLabel" type="Label" parent="UI/HUD"]
text = "Sentinel: WANDER   |   Suspicion: 0%"
label_settings = SubResource("LabelSettings_1")

[node name="SuspicionBar" type="ProgressBar" parent="UI/HUD"]
custom_minimum_size = Vector2(560, 20)
max_value = 100.0
value = 0.0

[node name="HintLabel" type="Label" parent="UI/HUD"]
text = "Arrows: move   |   Enter/Space: toggle HUD"
label_settings = SubResource("LabelSettings_2")
